feat: adicionando base e partials ao templates

--- a/templates/clockio/index.html
+++ b/templates/clockio/index.html
@@ -1,14 +1,7 @@
+{% extends 'clockio/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">
-    <title>Document</title>
-</head>
-<body>
-    <h1>ola mundooo</h1>
-</body>
-</html>
+{% block content %}
+    <div>
+        <h1>Olá mundo CLOCKIO</h1>
+    </div>
+{% endblock %} 
