--- a/employee/templates/employee/pages/home.html
+++ b/employee/templates/employee/pages/home.html
@@ -4,9 +4,9 @@
     <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
-                    <i class="fas fa-address-book"></i>
-                    <span>Employee {{ name }}</span>
+                <a class="main-logo" href="/">
+                    <i class="fas fa-address-book main-logo-icon"></i>
+                    <span class="main-logo-text">Employee</span>
                 </a>
             </h1>
         </div>
