--- a/employee/templates/employee/partials/head.html
+++ b/employee/templates/employee/partials/head.html
@@ -28,6 +28,7 @@
         body {
             font-size: 1.6rem;
             font-family: Arial, Helvetica, sans-serif;
+            background: #13141f;
         }
 
         h1, h2, h3, h4, h5, h6 {
@@ -59,6 +60,48 @@
 
         .main-logo-icon {
             margin-right: 2rem;
+        }
+
+        .search-form {
+            border: .2rem solid darkgrey;
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-input, .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+            transition: all 300ms ease-in-out;
+        }
+
+        .search-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .search-button:focus {
+            outline: 1px solid black;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .search-input {
+            width: 100%;
+            padding-right: 4rem;
+        }
+
+        .search-form:focus-within {
+            border-color: blueviolet;
+            background: white;
+        }
+
+        .search-form:focus-within .search-button {
+            color: red;
         }
 
     </style>
