--- a/employee/templates/employee/partials/head.html
+++ b/employee/templates/employee/partials/head.html
@@ -104,6 +104,16 @@
             color: red;
         }
 
+        .main-content {
+            padding-top: 0;
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+            gap: 4rem;
+        }
+
     </style>
 
 </head>
