--- a/employee/templates/employee/pages/home.html
+++ b/employee/templates/employee/pages/home.html
@@ -2,15 +2,11 @@
 
 <body>
     {% include 'employee/partials/header.html' %}
+    {% include 'employee/partials/search.html' %}
 
-    <div class="search-container">
-        <div class="container">
-            <form action="" class="search-form">
-                <input type="search" class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
-        </div>
-    </div>
+    <main class="main-content-container">
+        <div class="main-content main-content-list container"></div>
+    </main>
 </body>
 
 </html>
