--- a/employee/templates/employee/pages/home.html
+++ b/employee/templates/employee/pages/home.html
@@ -7,6 +7,8 @@
     <main class="main-content-container">
         <div class="main-content main-content-list container"></div>
     </main>
+
+    {% include 'employee/partials/footer.html' %}
 </body>
 
 </html>
