--- a/employee/templates/employee/partials/head.html
+++ b/employee/templates/employee/partials/head.html
@@ -114,6 +114,25 @@
             gap: 4rem;
         }
 
+        .main-footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: peru;
+            color: azure;
+            padding: 4rem;
+        }
+
+        .main-footer a {
+            color: white;
+            text-decoration: none;
+            transition: all 300ms ease-in-out;
+        }
+
+        .main-footer a:hover {
+            filter: brightness(.8);
+        }
+
     </style>
 
 </head>
