--- a/employee/templates/employee/pages/contact.html
+++ b/employee/templates/employee/pages/contact.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employees</title>
-</head>
-<body>
+{% extends 'global/base.html' %}
+
+{% block content %}
+
+<div class="main-content main-content-list container">
     <h1>Contact</h1>
-</body>
-</html>
+</div>
+
+{% endblock content %}
