--- a/employee/templates/employee/pages/contact.html
+++ b/employee/templates/employee/pages/contact.html
@@ -1,9 +1,11 @@
 {% extends 'global/base.html' %}
 
+{% block title %}Contact{% endblock title %}
+
 {% block content %}
 
 <div class="main-content main-content-list container">
-    <h1>Contact</h1>
+    <h1>Olá Contact</h1>
 </div>
 
 {% endblock content %}
