--- a/employee/templates/employee/pages/home.html
+++ b/employee/templates/employee/pages/home.html
@@ -7,8 +7,13 @@
 <div class="main-content main-content-list container">
     <h1>Olá Home</h1>
     {% for employee in employees %}
+    <!--
+    Usando app_name em urls: 'employees:home'
+    Sem usar app_name em urls: 'employees-home'
+    -->
+        <a href="{% url 'employees:home' employee.id %}"></a>
         <h2>{{ employee.name }}</h2>
-        <h2>{{ employee.created_at/date:"d/m/Y"}} às {{ employee.created_at/date:"H:i" }}</h2>
+        <h2>{{ employee.created_at|date:"d/m/Y"}} às {{ employee.created_at|date:"H:i" }}</h2>
     {% endfor %}
 </div>
 
